--- a/src/style.css
+++ b/src/style.css
@@ -119,12 +119,56 @@ body {
 }
 
 /* Modal Styling */
-/* .modal {
-    display: block
-} */
+.modal {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  /* Modal Content */
+  .modal-content {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #FEFEFE;
+    width: 60vw;
+  }
+  /* The Close Button */
+  .close {
+    color: #6D6D6D;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .modal-header {
+    padding: 2px 16px;
+    color: #6D6D6D;
+  }
+  .modal-body {
+    padding: 2px 16px;
+  }
 
+  #modal-img {
+    width: 45%;
+    display: block;
+    margin: 0 auto;
+  }
 
-
+  #modal-dex-num, #modal-poke-name, #modal-height, #modal-weight {
+    text-align: center;
+  }
 
 /* Type Styling */
 
